--- a/Doc/GenRapport/src/S1.md
+++ b/Doc/GenRapport/src/S1.md
@@ -40,12 +40,7 @@ Pour cette première semaine.
 ## Pourquoi ce diagramme UML ? 
 
 Nous avons décidé d'intégrer ce diagramme pour deux principales raisons : 
- - **Plannifier** correctement le projet et les classes à développer, afin de **fournir une bonne base** pour la suite du développement, et notamment l'interface utilisateur, qui doit s'appuyer sur une codebase solide
- - **Repérer et corriger les éventuelles erreurs** de conception du code, que ce soit dans les **structures de données utilisées** ou leur **manière d'interagir**, afin d'éviter les ralentissements dûs à de lourds changements plus tard (il vaut mieux prévenir que guérir).
-
-## Structure principale du code
-
-- La classe abstraite `DataType`, mère de toutes les autres classes, prévoit l'importation et exportation de ses données au format CSV (via deux méthodes abstraites `boolean importCSV(String)` et `boolean exportCSV(String)`), utilisées pour gérer les fichiers externes. 
+ - **Plannifier** correctemen- `FOOD_ALLERGY` : La contrainte de régime alimentaire n'est pas respectée. Le régime alimentaire de l'invité n'est pas le même que celui de l'adolescent hôte'importation et exportation de ses données au format CSV (via deux méthodes abstraites `boolean importCSV(String)` et `boolean exportCSV(String)`), utilisées pour gérer les fichiers externes. 
 
 - La classe `TeenagerInventory` encapsule plusieurs objets de type `Teenager` au sein d'un `ArrayList<Teenager>`, permettant ainsi de gérer de manière centralisée tous les adolescents de la plateforme d'échanges. En dehors de cela, son attribut principal est `CriteriaMap<String, String>`, qui renseigne tous les critères existants, ainsi que leurs types (`T` pour du texte, `B` pour des booléens, etc). Elle possède également différentes **méthodes** :
 
@@ -84,3 +79,41 @@ Nous avons décidé d'intégrer ce diagramme pour deux principales raisons :
 - L'enumération `Country` contient les différents pays sous format abbréger elle contient comme méthode :
     1. `longLabel`Renvoie le nom complet d'un Pays.
 
+# Semaine 3 et 4
+
+Voici tout d'abord le diagramme UML pour ces deux semaines.
+
+![Diagramme UML du projet semaines 3 et 4](./assets/DiagramUMLS3.pdf)
+
+## Changements principaux 
+
+Voici une liste des principaux changements dans la structure du code pour ces semaines.
+
+### Structure principale du code
+
+ - Le code est maintenant défini dans un package `model`. Cela permettra par la suite d'implémenter l'interface utilisateur dans un autre package, `model` ayant pour but de fournir le **back-end du projet** (une sorte d'API). Ainsi, une interface graphique peut **ne pas être le seul moyen d'interagir avec le logiciel**, et on pourrait imaginer d'autres types d'interfaces - comme une interface en ligne de commandes (TUI).
+
+### Package `model` : structure back-end du projet
+
+ - La classe `Affectation` contient maintenant une autre signature pour la méthode `compatibility()`, sans argument `History h`. L'utilisation de cette méthode sans cet argument implique que **l'historique d'affectation n'est pas pris en compte dans le calcul de la compatibilité entre deux étudiants**
+
+ - La méthode `compatibility()` est également appelée dans le constructeur de la classe  `Affectation`. Le constructeur prend donc désormais ces deux signatures : 
+    - `Affectation(Teenager host, Teenager guest, History h)`
+    - `Affectation(Teenager host, Teenager guest)` (l'historique n'est donc pas pris en compte dans le calcul de la compatibilité)
+
+ - Un nouveau type d'exception a été implémentée : `AffectationException`. Elle prend un argument `String reason`, qui représente la raison de la levée de l'exception. Une fonction `void printTrace()` permet d'afficher la raison de la levée de l'exception.  
+ Nous avons fait ce choix pour plus de flexibilité, permettant de lever n'importe quel type d'exception (toujours relative à la compatibilité entre deux adolescents)
+
+ - La méthode `compatibility()` de la classe `Affectation` lève désormais des `AffectationException` si certaines contraintes rédhibitoires ne sont pas respectées. Celles-ci peuvent avoir plusieurs raisons : 
+    - `FOOD_ALLERGY` : La contrainte de régime alimentaire n'est pas respectée. Le régime alimentaire de l'invité n'est pas le même que celui de l'adolescent hôte
+    - `ANIMAL_ALLERGY` : La contrainte d'allergie aux animaux n'est pas respectée. L'adolescent invité est allergique aux animaux, alors que l'adolescent hôte en possède un.
+    - `HISTORY` : La contrainte de l'historique n'est pas respectée :
+        - L'hôte et l'invité n'ont jamais été mis ensemble, mais aucun des deux ne souhaite être affecté à quelqu'un d'autre (`same`)
+        - L'hôte et l'invité ont déjà été mis ensemble, mais au moins l'un d'entre eux souhaite être avec quelqu'un d'autre (`other`)
+ - La classe `Affectation` contient quelques méthodes statiques privées servant dans `compatibility()`, notamment `boolean ArrayContains(String[] array, String element)` et `boolean ArrayListContains(ArrayList<String> arrayList, String element)`, qui permettent de savoir si (respectivement) un tableau ou une arraylist contiennent un élément String spécifié.  
+ Il y a également une méthode `double getHobbiesCompatibility(String[] hobbies_a, String[] hobbies_b)`, qui permet de déporter le calcul de compatibilité des passe-temps des adolescents dans la méthode `compatibility()`.
+ - La classe `Teenager` contient maintenant une méthode `String getCriteriaValue(String criterion)`, qui permet d'obtenir la valeur d'un critère donné. Elle retourne une string vide (`""`) si la clé spécifiée n'existe pas.
+ - La classe `Teenager` implémente une méthode `double compatibility(Teenager other)`, qui crée une affectation temporaire avec un autre adolescent, et renvoie le score de compatibilité de l'affectation
+ - La classe `History` implémente maintenant de nouvelles méthodes pour la gestion de l'historique d'affectation : 
+    - La méthode `void addAffectation(Affectation affectation)`, qui permet d'ajouter une affectation dans l'historique.
+    - La méthode `void addAffectations(ArrayList<Affectation> affectations)`, qui permet d'ajouter plusieurs affectations directement en passant une ArrayList d'affectations en argument.
