--- a/Doc/GenRapport/src/S1.md
+++ b/Doc/GenRapport/src/S1.md
@@ -2,31 +2,31 @@
 
 ```
 .
-├── App/
-│   ├── lib/
-│   │   └── Bibliothèques utiles au projet
-│   ├── src/
-│   │   ├── model/
-│   │   │   └── Bibliothèques back-end, partie POO
-│   │   └── ui/
-│   │       └── Interface utilisateur JavaFX, parie IHM
-│   └── test/
-│       ├── Programmes de test
-│       └── data/
-│           └── Samples de test (fichiers CSV)
-├── Graphes/
-│   └── Rapport de graphes
-└── Doc/
-    ├── gen/
-    │   ├── assets/
-    │   │   ├── Images
-    │   │   └── Diagrammes UML
-    │   ├── Fichiers sources & makefile des rapports
-    │   └── Prototypes d'interface IHM
-    └── rapport.pdf  
+App/
+    lib/
+        Bibliothèques utiles au projet
+    src/
+        model/
+            Bibliothèques back-end, partie POO
+        ui/
+            Interface utilisateur JavaFX, parie IHM
+    test/
+        Programmes de test
+        data/
+            Samples de test (fichiers CSV)
+Graphes/
+    Rapport de graphes
+Doc/
+    gen/
+        assets/
+            Images
+            Diagrammes UML
+        Fichiers sources & makefile des rapports
+        Prototypes d'interface IHM
+    rapport.pdf
 ```
 
-## Pourquoi séparer les parties POO et IHM ? 
+## Pourquoi séparer les parties POO et IHM ?
 
 Cette division vient d'une envie de propreté dans la structure principale du projet. Ainsi, le package dédié à l'interface utilisateur contient essentiellement les classes utiles au logiciel graphique, et ne fait donc qu'importer et utiliser les librairies contenues dans `model`.  
 Cela permet également d'isoler la partie back-end pour les tests.
