--- a/Doc/GenRapport/src/S1.md
+++ b/Doc/GenRapport/src/S1.md
@@ -117,3 +117,31 @@ Voici une liste des principaux changements dans la structure du code pour ces se
  - La classe `History` implémente maintenant de nouvelles méthodes pour la gestion de l'historique d'affectation : 
     - La méthode `void addAffectation(Affectation affectation)`, qui permet d'ajouter une affectation dans l'historique.
     - La méthode `void addAffectations(ArrayList<Affectation> affectations)`, qui permet d'ajouter plusieurs affectations directement en passant une ArrayList d'affectations en argument.
+
+# Semaine 5 et 6
+
+Voici tout d'abord le diagramme UML pour ces deux semaines.
+
+![Diagramme UML du projet semaines 3 et 4](./assets/DiagramUMLS5.pdf)
+
+## Changements principaux
+
+Voici une liste des principaux changements apportés au code durant ces deux semaines :
+
+- Ajout de l'interface `DataType` pour unifier l'import/export de données dans les classes concernées.
+- Implémentation des méthodes d'importation et d'exportation CSV dans les classes `TeenagerInventory` et `History`.
+- Création de deux méthodes utilitaires dans `Teenager` pour faciliter les conversions avec le format CSV :
+  - `Teenager lineToTeen(String line, String separator)`
+  - `String teenToLine(Teenager teen)`
+
+## Importation et Exportation de données
+
+Les classes `TeenagerInventory` et `History` implémentent l'interface `DataType`, ce qui impose la présence de deux méthodes : `importCSV(String, Boolean)` et `exportCSV(String)`.
+
+Dans `TeenagerInventory`, le fichier CSV est lu ligne par ligne. Chaque ligne est convertie en objet `Teenager` grâce à la méthode statique `Teenager.lineToTeen()` et ajoutée à l’inventaire via `addTeenager()`.
+
+L'exportation fait l'inverse : chaque objet `Teenager` est converti en ligne de texte grâce à `Teenager.teenToLine()` puis écrit dans un fichier CSV, avec en-tête.
+
+Dans `History`, l'importation est similaire, sauf que chaque ligne contient **deux adolescents concaténés** (host et guest). La ligne est coupée en deux, chaque moitié convertie en objet `Teenager`, puis associée dans un objet `Affectation`.
+
+Ces méthodes permettent de stocker ou recharger facilement l’état des données du projet.
